fix(task-selection): prevent layout shifts on hover (#1158)

--- a/frontend/app/styles/components/power-select.css
+++ b/frontend/app/styles/components/power-select.css
@@ -58,3 +58,7 @@
 .ember-power-select-options[role="listbox"] {
   @apply max-h-96 overflow-y-auto lg:max-h-[28rem];
 }
+
+.ember-tether-target-marker {
+  @apply hidden;
+}
